Fix to Number >> truncated for handling negative integers

--- a/css/jtalk.css
+++ b/css/jtalk.css
@@ -273,7 +273,7 @@ body.jtalkBody {
 .jtalkTool .jt_delete {
     position: absolute;
     top: 129px;
-    left: 180px;
+    left: 185px;
     z-index: 1;
 }
 
